<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:text="@string/header"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/argument1"
        android:hint="@string/argument1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/argument2"
        android:hint="@string/argument2"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/operationHeader"
        android:text="@string/operationHeader"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/operationsOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/multiply"
            android:text="@string/multiply"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/divide"
            android:text="@string/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/add"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/subtract"
            android:text="@string/subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RadioGroup>
    <TextView
        android:id="@+id/answerHeader"
        android:text="@string/answerHeader"
        android:textSize="25dp"
        android:paddingTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/answer"
        android:textSize="20dp"
        android:hint="@string/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/callButton"
        android:text="@string/callButton"
        android:onClick="performOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</LinearLayout>
